--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Quantitative Methoden I</title>
+<title>Quantitative Methoden</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -316,12 +316,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Quantitative Methoden I</h1>
+<h1 class="title toc-ignore">Quantitative Methoden</h1>
 
 </div>
 
 
-<p>Hello, Website!</p>
+<p>Herzlich willkommen auf der Begleitseite zu den Modulen Quantitative Methoden I und II im Studienfach Psychologie an der Uni Göttingen.</p>
+<p>Auf dieser Website finden Sie die Materialien und Zusammenfassungen der einzelnen Sitzungen. Zu den jeweiligen Sitzungen gelangen Sie über das Menü “Veranstaltung”.</p>
+<p>Viel Spaß.</p>
+<div class="figure">
+<img src="images/home/cat.PNG" alt="" />
+<p class="caption">test</p>
+</div>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
 
