--- a/index.html
+++ b/index.html
@@ -322,12 +322,10 @@ $(document).ready(function () {
 
 
 <p>Herzlich willkommen auf der Begleitseite zu den Modulen Quantitative Methoden I und II im Studienfach Psychologie an der Uni Göttingen.</p>
-<p>Auf dieser Website finden Sie die Materialien und Zusammenfassungen der einzelnen Sitzungen. Zu den jeweiligen Sitzungen gelangen Sie über das Menü “Veranstaltung”.</p>
+<p>Auf dieser Website finden Sie die Materialien und Zusammenfassungen der einzelnen Sitzungen.</p>
+<p>Zu den jeweiligen Sitzungen gelangen Sie über das Menü “Veranstaltung”.</p>
 <p>Viel Spaß.</p>
-<div class="figure">
-<img src="images/home/cat.PNG" alt="" />
-<p class="caption">test</p>
-</div>
+<p><img src="images/home/squirrel.PNG" /></p>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
 
