--- a/page-einf.html
+++ b/page-einf.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sitzung 1: Einführung</title>
+<title>Sitzung 1: Einführung - Arbeiten mit Microsoft Excel</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -292,7 +292,7 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Quantitative Methoden I</li>
     <li>
-      <a href="page-einf.html">Sitzung 1: Arbeiten mit Excel</a>
+      <a href="page-einf.html">Sitzung 1: Einführung - Arbeiten mit MS Excel</a>
     </li>
     <li>
       <a href="page-umfrexp.html">Sitzung 2: Umfragen und Experimente</a>
@@ -316,12 +316,67 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Sitzung 1: Einführung</h1>
+<h1 class="title toc-ignore">Sitzung 1: Einführung - Arbeiten mit Microsoft Excel</h1>
 
 </div>
 
 
-<p>Hier die Zusammenfassung für die Einführungssitzung.</p>
+<p>Für die Übungen im Modul Quantitative Methoden I benötigen Sie das Tabellenkalkulationsprogramm <strong>Microsoft Excel</strong>. Sofern Sie Excel nicht bereits auf Ihrem Rechner nutzen, können Sie als Studierende/r das Programm günstig über eine Uni-Lizenz bei studyhouse erwerben. Klicken Sie dazu einfach <a href="https://www.studyhouse.de/cgi-bin/product/office-proplus-georg-august-universitaet-goettingen-microsoft-bueroapplikationen-P10016549!381464">hier</a>.</p>
+<p>Eine frei verfügbare Alternative zu Microsoft Excel ist das Programm <strong>Libre Office Calc</strong>, welches Sie <a href="https://de.libreoffice.org/discover/calc/">hier</a> herunterladen können. Auch mit Libre Office Calc kann man die meisten Dinge machen. Die Übungen in diesem Seminar werden aber trotzdem mit Excel durchgeführt.</p>
+<p><br /></p>
+<p><img src="images/q1_01einf/excelsquirrel.PNG" /></p>
+<p><br /></p>
+<div id="erste-schritte---die-exceloberfläche" class="section level2">
+<h2>Erste Schritte - die Exceloberfläche</h2>
+<p>Wenn Sie Excel installiert haben und öffnen, sieht die Oberfläche zunächst so aus, wie in dem Bild unten.</p>
+<p>Sie haben hier die Möglichkeit, aus verschiedenen “Vorlagen” zu wählen, bereits existierende Dateien aus einem Ordner heraus zu öffnen, oder ein neues Dokument zu beginnen. Excel-Dokumente heißen <strong>Arbeitsmappen</strong>. Um eine neue Arbeitsmappe zu erstellen, klicken Sie ganz einfach auf <strong>Leere Arbeitsmappe</strong>.</p>
+<p><br /></p>
+<p><img src="images/q1_01einf/excel_oeffnen.PNG" style="width:70.0%" /> <br /> <br /></p>
+<div id="die-arbeitsmappenansicht" class="section level3">
+<h3>Die Arbeitsmappenansicht</h3>
+<p>Nachdem sie auf “Leere Arbeitsmappe” geklickt haben, gelangen Sie zur Arbeitsmappenansicht, die so aussieht, wie im Bild unten dargestellt. Im Wesentlichen sieht eine Arbeitsmappe aus wie eine riesige Tabelle, in der es jede Menge <strong>Spalten</strong> und <strong>Zeilen</strong> gibt. Spalten sind durch <strong>Buchstaben</strong> (A, B, C, …) und Zeilen durch <strong>Zahlen</strong> (1, 2, 3, …) gekennzeichnet. Die Schnittstelle zwischen einer Spalte und einer Zeile nennt man in Excel <strong>Zelle</strong>. Durch die Spalten- und Zeilenbeschriftungen kann also jede Zelle eindeutig benannt werden. Im Bild unten sind zur Verdeutlichung zwei Zellen rot markiert. Zum Beispiel befindet sich die erste rot markierte Zelle Spalte <strong>R</strong> und dort wiederum in Zeile <strong>3</strong>. Diese Zelle heißt also <strong>R3</strong>.</p>
+<p><img src="images/q1_01einf/tabelle_uebersicht.PNG" /> <br /> <br /></p>
+<p>Sie können mit Ihrer Maus in eine beliebe Zelle klicken. Die Zelle, die Sie anklicken, wird dann zur besseren Orientierung durch einem grünen Rahmen markiert. Wie Sie sehen können, ist im Bild die Zelle <strong>A1</strong> markiert.</p>
+<p>Sie können dann Einträge in eine ausgewählte Zelle hineinschreiben. Solche Einträge können entweder <strong>Text</strong> oder <strong>Zahlen</strong> sein. In den meisten Fällen werden wir dort natürlich Zahlen vorfinden, denn wir wollen ja in diesem Seminar Excel benutzen, um zu rechnen und statistische Analysen durchzuführen. Text verwendet man in der Regel, um bestimmte Spalten, Zeilen, oder Zellen mit einer Beschriftung zu versehen.</p>
+<p><br /></p>
+</div>
+<div id="eine-erste-tabelle-und-eine-erste-berechnung" class="section level3">
+<h3>Eine erste Tabelle und eine erste Berechnung</h3>
+<p><strong>Beispiel – Die Lebenserwartung von Eichhörnchen und Grauhörnchen:</strong></p>
+<p>Wir könnten jetzt zum Beispiel eine kleine Tabelle erstellen, in der wir uns die Lebenserwartungen von amerikanischen Grauhörnchen und europäischen Eichhörnchen notieren. Diese Tabelle ist in der ersten Abbildung unten dargestellt. Wie Sie dort sehen können, beträgt die durschnittliche Lebenserwartung von Eichhörnchen drei Jahre (das steht in… genau, in Zelle <strong>B2</strong>) und die von Grauhörnchen zehn Jahre (Zelle <strong>B3</strong>). Ein ziemlich großer Unterschied.</p>
+<p>Das schöne an Excel ist, dass man damit nicht nur Dinge notieren, sondern auch damit <strong>rechnen</strong> kann. Wir könnten jetzt z.B. die Differenz der zwei notierten Lebenserwartungen berechnen und das Ergebnis in Zelle <strong>D3</strong> hineinschreiben.</p>
+<p><br /></p>
+<p><img src="images/q1_01einf/squirrel_life.PNG" /> <br /></p>
+<p>Um in Excel eine Rechnung durchzuführen (s. Bild 2), klickt man zunächst in die Zelle, in die dar Ergebnis geschrieben werden soll (in unserem Fall <strong>D3</strong>). Danach schreibt man in diese Zelle ein <strong>Gleichheitszeichen</strong> (=); das ist für Excel nämlich das Signal, dass nun gerechnet werden soll. Wir könnten jetzt also in die Zelle <strong>D3</strong> einfach Folgendes schreiben: <span class="math inline">\(=10-3\)</span>. Wenn wir dann “Enter” drücken, wird das Ergebnis dieser Rechnung (7) in <strong>D3</strong> geschrieben. Wir müssen die Zahlen 10 und 3 aber nicht aus unserer Tabelle ablesen und manuell eintragen. Wir können nach dem “=” auch einfach mit der Maus zuerst Zelle <strong>B3</strong> anklicken, danach ein Minuszeichen (-) schreiben, und dann die Zelle <strong>B2</strong> anklicken. In Bild 2 oben können Sie sehen, wie das aussieht.</p>
+<p>Vielleicht fragen Sie sich jetzt, welchen Vorteil es haben könnte, statt den Zahlen lediglich die Koordinaten, <strong>B3</strong> und <strong>B2</strong>, einzutragen (s. Bild 2). Ein leicht ersichtlicher Vorteil ist natürlich, dass man so vermeidet, sich zu vertippen und versehentlich eine falsche Zahl einzutragen (was bei großen Tabellen schnell passieren kann).</p>
+<p>Ein weniger offensichtlicher aber gewaltiger Vorteil ist, dass die Ergebniszelle (<strong>D3</strong>) auf diese Weise <strong>“dynamisch”</strong> wird. Damit ist gemeint, dass sich das Ergebnis der Berechnung <strong>automatisch anpasst</strong>, wenn man in der Ausgangstabelle die <strong>Werte verändert</strong>. Stellen Sie sich vor, eine neue Studie hätte ergeben, dass europäische Eichhörnchen doch älter werden als zunächst gedacht (eine schöne Nachricht). Ändern Sie die “3” in eine “4”. Was passiert mit der berechneten Differenz? Genau, das Ergebnis wird automatisch aktualisiert (6 statt 7).</p>
+<p><br /></p>
+</div>
+<div id="speichern-einer-arbeitsmappe" class="section level3">
+<h3>Speichern einer Arbeitsmappe</h3>
+<p>Eine so wichtige Tabelle wie unsere Hörnchenlebenserwartungstabelle darf natürlich auf keinen Fall verloren gehen. Deshalb sollte man wissen, wie man Arbeitsmappen <strong>abspeichern</strong> kann. Das funktioniert in Excel wie mit den meisten Programmen, die Sie schon kennen.Klicken Sie oben im <strong>grünen Bereich</strong> des Programms auf <strong>Datei</strong>. In dem erscheinenden Menü finden Sie die Auswahl <strong>“Speichern unter”</strong>. Damit können Sie die gegenwärtige Arbeitsmappe in einem beliebigen Ordner Ihres Rechners speichern. Am besten erstellen Sie sich einen neuen Ordner, den Sie “Quanti 1” nennen. Dort können Sie dann alle Excel-Dateien, die Sie im Verlauf dieses Semesters erstellen werden, sammeln.</p>
+<p><br /></p>
+<p><img src="images/q1_01einf/excel_speichern.PNG" style="width:70.0%" /> <br /> <br /></p>
+</div>
+</div>
+<div id="ein-etwas-komplexeres-beispiel" class="section level2">
+<h2>Ein etwas komplexeres Beispiel</h2>
+<p>Nachdem Sie sich nun ein wenig mit der Excel-Umgebung vertraut gemacht haben, wollen wir uns jetzt zum Ende dieser Einführungssitzung noch ein etwas umfangreicheres Beispiel ansehen.</p>
+<p><strong>Die Geburtstage der Studierenden im Wintersemester 19/20:</strong></p>
+<p>Im Bild unten sehen Sie eine ziemlich große Tabelle, in der die Gebutstagsdaten aller Studierenden der Uni Göttingen aufgelistet sind, die zum Zeitpunkt des 10.10.2019 an der Universität immatrikuliert gewesen waren. Mit Hilfe der Daten in dieser Tabelle wollen wir uns jetzt noch einige sehr nützliche Excel-Funktionen ansehen.</p>
+<p>Sie müssen sich diese Tabelle nicht selbst erstellen. Sie finden alle Materialen in einem so genannten “Online Repository”. Zur Übersicht über alle Sitzungen gelangen Sie <a href="https://github.com/QuantiGoettingen/quanti_eins_files">hier</a>. Die Excel-Datei mit dem “Geburtstage-Beispiel” können Sie direkt <a href="https://github.com/QuantiGoettingen/quanti_eins_files/blob/master/01_Einf%C3%BChrung/01_Einf%C3%BChrung_Geburtstage.xlsx">hier</a> herunterladen und danach öffnen.</p>
+<p><br /></p>
+<p><img src="images/q1_01einf/geburtstage_1.PNG" style="width:95.0%" /> <br /> <br /></p>
+<p>In Spalte <strong>C</strong> stehen die verschiedenen Geburtstagsdaten, in Spalte <strong>B</strong> der dazugehörige Monat und in Spalte <strong>A</strong> die dazugehörige Jahreszeit. In Datumsspalte <strong>C</strong> ist über die Spalten <strong>D</strong> und <strong>E</strong> noch einmal aufgeteilt (in Tag und Monat). Spalte <strong>F</strong> gibt an, wie viele Studierende an einem bestimmten Tag Geburstag haben.</p>
+<p>Weiter rechts in der Arbeitsmappe sehen Sie eine Reihe von <strong>Aufgaben</strong>. Darunter befindet sich eine vorgefertigte Tabelle, in die die Ergebnisse eingetragen werden sollen.</p>
+<p><br /></p>
+<p><strong>Aufgabe 1) Wie viele Studierende waren im WiSe 2019/2020 eingeschrieben?</strong></p>
+<p>Das Ergebnis soll in Zelle <strong>J33</strong> geschrieben werden, also in die Zelle rechts neben der Zelle, die <strong>“Gesamtanzahl”</strong> heißt. Eine Gesamtzahl lässt sich in Excel sehr schnell mit Hilfe der so genannten <strong>“Summenfunktion”</strong> ermitteln. Die Summenfunktion ist die erste Excel-Funktion, die Sie jetzt kennenlernen werden.</p>
+<p>So gehts: klicken Sie in Zelle <strong>J33</strong> und schreiben Sie wieder “<span class="math inline">\(=\)</span>”. Schreiben Sie unmittelbar dahinter “SUMME” und öffnen sie eine runde Klammer, “(”. Markieren Sie nun mit ihrer Maus den Spaltenbereich in Spalte <strong>F</strong>, in der die Anzahlen der Studierenden aufgelistet sind.Sie sollten einen farbigen Rahmen um diesen Spaltenbereich herum sehen. Danach beenden Sie die begonnende Funktion mit einer geschlossenen Klammer, “)”, und drücken Enter. Sie sollten jetzt das Ergebnis sehen (30405). Im Bild unten ist das Vorgehen noch einmal verdeutlicht.</p>
+<p><br /></p>
+<p><img src="images/q1_01einf/excel_summe.PNG" style="width:90.0%" /> <br /> <br /></p>
+<p><strong>Aufgabe 2) Zählen Sie aus, wie viele Studierende in jeder Jahreszeit Geburtstag haben</strong></p>
+</div>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
 
