--- a/page-einfr.html
+++ b/page-einfr.html
@@ -292,7 +292,7 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Quantitative Methoden I</li>
     <li>
-      <a href="page-einf.html">Sitzung 1: Arbeiten mit Excel</a>
+      <a href="page-einf.html">Sitzung 1: Einführung - Arbeiten mit MS Excel</a>
     </li>
     <li>
       <a href="page-umfrexp.html">Sitzung 2: Umfragen und Experimente</a>
