added an illustration

--- a/page-einf.html
+++ b/page-einf.html
@@ -376,6 +376,12 @@ $(document).ready(function () {
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_summe.PNG" style="width:90.0%" /> <br /> <br /></p>
 <p><strong>Aufgabe 2) Zählen Sie aus, wie viele Studierende in jeder Jahreszeit Geburtstag haben</strong></p>
+<p>Um diese Aufgabe zu lösen, bietet es sich an, die Jahreszeitenspalte (Spalte <strong>A</strong>) zunächst zu sortieren. Markieren Sie dazu mittels “Klicken und Ziehen” den gesamten Abschnitt in Spalte <strong>A</strong>, in dem die Jahreszeiten stehen. Danach finden Sie oben rechts im Menübereich die Rubrik <strong>“Sortieren und Filtern”</strong>. Unten sehen Sie wieder ein Beispielbild. Dort können Sie auswählen, ob sie die Spalte “rückwärts” von Z nach A oder “vorwärts” von A nach Z sortieren wollen. Wir nehmen in diesem Fall von Z nach A, da dann der Winter, mit dem das Jahr beginnt, oben steht.</p>
+<p><br /></p>
+<p><img src="images/q1_01einf/excel_marksort.PNG" style="width:90.0%" /> <br /></p>
+<p>Nachdem Sie auf “von Z bis A” geklickt haben, wird Excel Ihnen eine Meldung anzeigen, die im nachfolgenden Bild zu sehen ist:</p>
+<p><img src="images/q1_01einf/excel_markerweitern.PNG" style="width:40.0%" /> <br /></p>
+<p>Das Programm versichert sich hier, ob man tatsächlich nur die markierte Spalte sortieren möchte, oder ob man die <strong>benachbarten Spalten auch mitsortieren</strong> möchte. Das “Mitsortieren” der Nachbarspalten erfolgt, wenn man den Punkt <strong>Markierung erweitern</strong> auswählt (ist schon standardmäßig vorgeschlagen). Was denken Sie, was in unserem Fall richtig ist?</p>
 </div>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
