--- a/page-einf.html
+++ b/page-einf.html
@@ -416,8 +416,17 @@ $(document).ready(function () {
 <p>Sie sollten jetzt die Lösung für den Monat Dezember sehen. Um diesen Schritt jetzt nicht weitere elf Male wiederholen zu müssen, können wir den Funktionseintrag von eben noch einmal leicht abändern und uns danach wieder die “automatische Vervollständigung” von Excel zu Nutze machen.</p>
 <p>Klicken Sie noch einmal mit Doppelklick in die gerade erstellte Ergebniszelle <strong>L20</strong>. Dadurch wird die Funktion von eben wieder “aktiv” und wir können Änderungen vornehmen. Schreiben Sie jetzt Dollarzeichen an die Stellen, wie unten in der Abbildung gezeigt. Drücken Sie dann wieder Enter.</p>
 <p><img src="images/q1_01einf/excel_dollars.PNG" style="width:80.0%" /> <br /> <br /></p>
-<p>Machen Sie jetzt in dieser Spalte eine “automatische Vervollständigung” mit “klicken und nach unten ziehen”, genau wie Sie es schon für die Monatsspalte links danaben gemacht hatten.</p>
+<p>Machen Sie jetzt in dieser Spalte eine “automatische Vervollständigung” mit “klicken und nach unten ziehen”, genau wie Sie es schon für die Monatsspalte links danaben gemacht hatten. Sie sollten jetzt die Ergebnisse für alle anderen Monate erhalten haben.</p>
+<p>Was wäre passiert, wenn man die Dollarzeichen nicht gesetzt hätte? Probieren Sie das einmal aus und schauen Sie, was sich ändert.</p>
+<p>Mit Dollarzeichen kann man Zellenbezüge (oder sogar ganze Spaltenbezüge) <strong>fixieren</strong>. Das ist sehr nützlich, um vernünftig mit Dingen, wie der automatischen Vervollständigung, arbeiten zu können.</p>
 <p><br /></p>
+<div class="boxBorder">
+<p><strong>TIPP:</strong> <em>Am besten lässt sich die Nützlichkeit des</em> <strong>Fixierens von Zellen mit Dollarzeichen</strong> <em>mit Hilfe eines anschaulichen Videos verstehen. Ein sehr gutes</em> <strong>YouTube-Video</strong> <em>dazu finden Sie <a href="https://www.youtube.com/watch?v=jldnaofJAC4">hier</a>. Da das Fixieren von zellen äußert wichtig ist, sollten Sie sich auf jeden Fall die Zeit nehmen, dieses Video zu schauen.</em></p>
+</div>
+<p><br /> <br /></p>
+<p><strong>Aufgabe 4) Besetimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</strong></p>
+<p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not haben wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
+<p><br /> <br /></p>
 </div>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
