--- a/page-einf.html
+++ b/page-einf.html
@@ -425,7 +425,7 @@ $(document).ready(function () {
 </div>
 <p><br /> <br /></p>
 <p><strong>Aufgabe 4) Besetimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</strong></p>
-<p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not haben wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
+<p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
 <p><br /> <br /></p>
 </div>
 
