--- a/index.html
+++ b/index.html
@@ -321,9 +321,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>Herzlich willkommen auf der Begleitseite zu den Modulen Quantitative Methoden I und II im Studienfach Psychologie an der Uni Göttingen.</p>
-<p>Auf dieser Website finden Sie die Materialien und Zusammenfassungen der einzelnen Sitzungen.</p>
+<p>Herzlich willkommen auf der Seminarseite zu den Modulen Quantitative Methoden I und II im Studienfach Psychologie an der Uni Göttingen.</p>
+<p>Auf dieser Website finden Sie Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
 <p>Zu den jeweiligen Sitzungen gelangen Sie über das Menü “Veranstaltung”.</p>
+<p>Die Lernmaterialien (Datensätze, Lösungen, etc.) haben wir in einem GitHub Online-Repository für Sie hinterlegt. Sie können sich die Materialien dort downloaden.</p>
+<p>Zu den Materalien für Quanti I geht es <a href="https://github.com/QuantiGoettingen/quanti_eins_files">hier</a>.</p>
+<p>Zu den Materialien für Quanti II geht es <a href="https://github.com/QuantiGoettingen/quanti_zwei_files">hier</a>.</p>
 <p>Viel Spaß.</p>
 <p><img src="images/home/squirrel.PNG" /></p>
 
