--- a/page-einf.html
+++ b/page-einf.html
@@ -364,7 +364,7 @@ $(document).ready(function () {
 <p>Nachdem Sie sich nun ein wenig mit der Excel-Umgebung vertraut gemacht haben, wollen wir uns jetzt zum Ende dieser Einführungssitzung noch ein etwas umfangreicheres Beispiel ansehen.</p>
 <p><strong>Die Geburtstage der Studierenden im Wintersemester 19/20:</strong></p>
 <p>Im Bild unten sehen Sie eine ziemlich große Tabelle, in der die Gebutstagsdaten aller Studierenden der Uni Göttingen aufgelistet sind, die zum Zeitpunkt des 10.10.2019 an der Universität immatrikuliert gewesen waren. Mit Hilfe der Daten in dieser Tabelle wollen wir uns jetzt noch einige sehr nützliche Excel-Funktionen ansehen.</p>
-<p>Sie müssen sich diese Tabelle nicht selbst erstellen. Sie finden alle Materialen in einem so genannten “Online Repository”. Zur Übersicht über alle Sitzungen gelangen Sie <a href="https://github.com/QuantiGoettingen/quanti_eins_files">hier</a>. Die Excel-Datei mit dem “Geburtstage-Beispiel” können Sie direkt <a href="https://github.com/QuantiGoettingen/quanti_eins_files/blob/master/01_Einf%C3%BChrung/01_Einf%C3%BChrung_Geburtstage.xlsx">hier</a> herunterladen und danach öffnen.</p>
+<p>Sie müssen sich diese Tabelle nicht selbst erstellen. Sie finden alle Materialen in unserem GitHub Online-Repository. Zur Übersicht über alle Sitzungen gelangen Sie <a href="https://github.com/QuantiGoettingen/quanti_eins_files">hier</a>. Die Excel-Datei mit dem “Geburtstage-Beispiel” können Sie direkt <a href="https://github.com/QuantiGoettingen/quanti_eins_files/blob/master/01_Einf%C3%BChrung/01_Einf%C3%BChrung_Geburtstage.xlsx">hier</a> herunterladen.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/geburtstage_1.PNG" style="width:100.0%" /> <br /> <br /></p>
 <p>In Spalte <strong>C</strong> stehen die verschiedenen Geburtstagsdaten, in Spalte <strong>B</strong> der dazugehörige Monat und in Spalte <strong>A</strong> die dazugehörige Jahreszeit. In Datumsspalte <strong>C</strong> ist über die Spalten <strong>D</strong> und <strong>E</strong> noch einmal aufgeteilt (in Tag und Monat). Spalte <strong>F</strong> gibt an, wie viele Studierende an einem bestimmten Tag Geburstag haben.</p>
@@ -424,6 +424,7 @@ $(document).ready(function () {
 <p><strong>TIPP:</strong> <em>Am besten lässt sich die Nützlichkeit des</em> <strong>Fixierens von Zellen mit Dollarzeichen</strong> <em>mit Hilfe eines anschaulichen Videos verstehen. Ein sehr gutes</em> <strong>YouTube-Video</strong> <em>dazu finden Sie <a href="https://www.youtube.com/watch?v=jldnaofJAC4">hier</a>. Da das Fixieren von zellen äußert wichtig ist, sollten Sie sich auf jeden Fall die Zeit nehmen, dieses Video zu schauen.</em></p>
 </div>
 <p><br /> <br /></p>
+<p><img src="https://www.youtube.com/watch?v=jldnaofJAC4" /></p>
 <p><strong>Aufgabe 4) Besetimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</strong></p>
 <p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
 <p><br /> <br /></p>
