--- a/page-einf.html
+++ b/page-einf.html
@@ -421,7 +421,7 @@ $(document).ready(function () {
 <p>Mit Dollarzeichen kann man Zellenbezüge (oder sogar ganze Spaltenbezüge) <strong>fixieren</strong>. Das ist sehr nützlich, um vernünftig mit Dingen, wie der automatischen Vervollständigung, arbeiten zu können.</p>
 <p><br /></p>
 <div class="boxBorder">
-<p><strong>TIPP:</strong> <em>Am besten lässt sich die Nützlichkeit des</em> <strong>Fixierens von Zellen mit Dollarzeichen</strong> <em>mit Hilfe eines anschaulichen Videos verstehen. Ein sehr gutes</em> <strong>YouTube-Video</strong> <em>dazu sehen Sie unten eingeblendet. Da das Fixieren von zellen äußert wichtig ist, sollten Sie sich auf jeden Fall die Zeit nehmen, dieses Video zu schauen.</em></p>
+<p><strong>TIPP:</strong> <em>Am besten lässt sich die Nützlichkeit des</em> <strong>Fixierens von Zellen mit Dollarzeichen</strong> <em>mit Hilfe eines anschaulichen Videos verstehen. Ein sehr gutes</em> <strong>YouTube-Video</strong> <em>des Kanals</em> <strong>TableTorial</strong> <em>dazu sehen Sie unten eingeblendet. Da das Fixieren von zellen äußert wichtig ist, sollten Sie sich auf jeden Fall die Zeit nehmen, dieses Video zu schauen.</em></p>
 </div>
 <p><br /> <br /></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jldnaofJAC4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
